--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <h1 class="text-xl md:text-2xl font-bold text-pink-500 flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 mr-2" viewBox="0 0 24 24" fill="currentColor"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
-                NeoGuia Fofinho
+                NeoGuia 
             </h1>
             <nav class="hidden md:flex space-x-4 font-medium text-base">
                 <a href="#anemia" class="text-gray-600 hover:text-pink-500 transition-colors duration-300">Anemia</a>
@@ -85,7 +85,7 @@
     <!-- Main Content -->
     <main class="container mx-auto p-4 md:p-8">
         <div class="text-center mb-16">
-            <h2 class="text-4xl lg:text-5xl font-extrabold text-gray-800 tracking-tight">Cuidando dos Pequenos Tesouros</h2>
+            <h2 class="text-4xl lg:text-5xl font-extrabold text-gray-800 tracking-tight">Guia Doençãs hematológicas</h2>
             <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Um guia de estudo visual sobre os desafios hematológicos nos recém-nascidos.</p>
         </div>
 
@@ -209,3 +209,4 @@
 
 </body>
 </html>
+
